# e21-3yp-ResQ

./: .gitattributes  .gitignore  README.md  firmware-test.txt  mockSession.json  package-lock.json  package.json  resq_schema.sql  tailwind.config.ts
.github/workflows/: deploy-cloud-api.yml  deploy-resq-cloud-api-self-hosted.yml  resq-firmware.yml  tests.yml
app/: globals.css  layout.tsx
app/api/sessions/: route.js
app/components/: CompressionDepthFrequencyChart.tsx
app/components/instructor/: InstructorHubDashboard.tsx
app/dashboard/instructor/: page.tsx
app/dashboard/student/: page.tsx
app/data/: mockDashboard.ts  mockSession.ts
app/instructor/dashboard/: page.tsx
app/login/: page.tsx
app/student/dashboard/: page.tsx
code/backend/database/: schema.sql
code/resq-cloud/: .gitignore  cloud_demo_runbook.md  cloud_deployment_checklist.md  package.json  pnpm-lock.yaml
code/resq-firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  prompt_changes.txt  sdkconfig.defaults  sdkconfig.old
code/resq-firmware/.devcontainer/: Dockerfile  devcontainer.json
code/resq-firmware/components/calibration_fail_manager/: CMakeLists.txt  calibration_fail_manager.c
code/resq-firmware/components/calibration_fail_manager/include/: calibration_fail_manager.h
code/resq-firmware/components/calibration_manager/: CMakeLists.txt  calibration_codes.c  calibration_manager.c
code/resq-firmware/components/calibration_manager/include/: calibration_codes.h  calibration_manager.h
code/resq-firmware/components/calibration_manager/include/mbedtls/: sha256.h
code/resq-firmware/components/calibration_manager/test/: CMakeLists.txt  test_calibration_codes.c
code/resq-firmware/components/calibration_state_manager/: CMakeLists.txt  calibration_state_manager.c
code/resq-firmware/components/calibration_state_manager/include/: calibration_state_manager.h
code/resq-firmware/components/error_manager/: CMakeLists.txt  error_codes.c  error_manager.c
code/resq-firmware/components/error_manager/include/: error_codes.h  error_manager.h
code/resq-firmware/components/error_manager/test/: CMakeLists.txt  test_error_codes.c
code/resq-firmware/components/paired_idle_manager/: CMakeLists.txt  idf_component.yml  paired_idle_manager.c
code/resq-firmware/components/paired_idle_manager/include/: paired_idle_manager.h
code/resq-firmware/components/runtime/: CMakeLists.txt  command_handler.c  device_control.c  factory_reset.c  fault_reporter.c  health_monitor.c  recovery_manager.c  session_manager.c  status_indicator.c  telemetry_publisher.c
code/resq-firmware/components/runtime/include/: command_handler.h  device_control.h  health_monitor.h  session_manager.h  status_indicator.h  telemetry_publisher.h
code/resq-firmware/components/runtime_helpers/: CMakeLists.txt  runtime_helpers.c
code/resq-firmware/components/runtime_helpers/include/: runtime_helpers.h
code/resq-firmware/components/runtime_helpers/test/: CMakeLists.txt  test_runtime_helpers.c
code/resq-firmware/components/session_active_manager/: CMakeLists.txt  session_active_manager.c
code/resq-firmware/components/session_active_manager/include/: session_active_manager.h
code/resq-firmware/components/telemetry_publisher/: CMakeLists.txt  README.md  telemetry_publisher.c
code/resq-firmware/components/telemetry_publisher/include/: telemetry_publisher.h
code/resq-firmware/components/telemetry_publisher/test/: CMakeLists.txt  test_telemetry_payload.c
code/resq-firmware/deploy_test/: README.md  config.example.toml  pytest.ini  requirements.txt
code/resq-firmware/docs/: WIFI_RETRY_POLICY.md
code/resq-firmware/dump-components/runtime/: CMakeLists.txt  command_handler.c  device_control.c  factory_reset.c  fault_reporter.c  health_monitor.c  recovery_manager.c  status_indicator.c  telemetry_publisher.c
code/resq-firmware/dump-components/runtime/include/: command_handler.h  factory_reset.h  fault_reporter.h  health_monitor.h  recovery_manager.h  session_manager.h
code/resq-firmware/main/: CMakeLists.txt  main.c
code/resq-firmware/scripts/: resq-firmware-test-stack.env.example  start-resq-firmware-test-stack.ps1
code/resq-firmware/test/: CMakeLists.txt  README.md  conftest.py  partitions.csv  pytest.ini  pytest_resq_unity.py  pytest_sensor_smoke_hil.py  sdkconfig.defaults  sdkconfig.old
code/resq-firmware/test_files/: RESQ_FIRMWARE_HARDWARE_TEST_README.md  resq_firmware_state_test.py  resq_firmware_state_test_harness (1).py  resq_firmware_state_test_harness.py  resq_firmware_test_report.json
code/resq-frontend/: .gitignore
code/resq-frontend/backend/: pom.xml
code/resq-frontend/db/: authorized_students.sql  hub_runtime.sql
code/resq-frontend/lib/: hubState.js  mockHubState.js
code/resq-frontend/scripts/: apply-hub-schema.js
code/resq-localhub/: .dockerignore  .env.example  .gitignore  README.md  amplify.yml  db.js  docker-compose.yml  package-lock.json  package.json  phase4-partial-copilot.patch  pnpm-lock.yaml  pnpm-workspace.yaml  prompt_change.txt  server.js  test_db.js  tsconfig.base.json  tsconfig.json
code/resq-localhub/.devcontainer/: Dockerfile  devcontainer.json
code/resq-localhub/apps/localhub-desktop/src-tauri/: Cargo.toml  tauri.conf.json
code/resq-localhub/apps/localhub-desktop/src-tauri/capabilities/: default.json
code/resq-localhub/apps/localhub-desktop/src-tauri/resources/config/: application-release.properties
code/resq-localhub/apps/localhub-desktop/src-tauri/resources/mosquitto/: mosquitto.conf
code/resq-localhub/apps/localhub-desktop/src-tauri/src/: api_service.rs  broker_service.rs  commands.rs  main.rs  process_lifecycle.rs
code/resq-localhub/docs/: api-endpoints.md  api.md  architecture-overview.md  (+19 more)
code/scripts/: generate_resq_qr.py
docs/: README.md  calibration-hardening-report.md  index.html
docs/audits/: localhub-critical-refactor-issues.md
docs/data/: index.json
docs/site/: 404.html  index.html
frontend/: index.html  package.json
frontend/src/: styles.css  types.ts
lib/: db.js  hubTypes.ts
resources/pcb_design/: 3yp_e21_resq.pdsprj
(+949 files in other folders)
