[package]
name = "localhub-desktop"
version = "0.1.0"
description = "ResQ Local Hub desktop shell"
authors = ["ResQ Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
