[package]
name = "localhub-desktop"
version = "0.1.1"
description = "ResQ Local Hub desktop shell"
authors = ["ResQ Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
hostname = "0.4"
local-ip-address = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.6", features = [] }
ureq = "2.9"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
